<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeManager</string>
    <string name="action_settings">Settings</string>
    <string name="calender">Calender</string>
    <string name="to_Do">To-Do</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_to_do_list">ToDoList</string>
    <string name="selectTask">Click Task for Details</string>
    <string name="addExercise">Add Exercise</string>
    <string name="title_activity_create_task">CreateTask</string>
    <string name="task">Exercise</string>
    <string name="deadline">Deadline</string>
    <string name="priority">Priority</string>
    <string name="priority1"> - High</string>
    <string name="priority2"> - Medium</string>
    <string name="priority3"> - Low</string>
    <string name="additional">Additional Information</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="invalidInput">Invalid Input</string>
    <string name="add_exercise">Add exercise</string>
    <string name="chooseDate"></string>
    <string name="back">Go back</string>
    <string name="title_activity_task_details">TaskDetails</string>
    <string name="loginName">E-Mail address</string>
    <string name="title_activity_login">Preferences</string>
    <string name="hello_world">Hello world!</string>
    <string name="finished">Finished</string>
    <string name="notYetFinished">Not yet finished</string>
    <string name="status">Status</string>
    <string name="okButtonClick">OK</string>
    <string name="deleteButtonClicked">DELETE EXERCISE</string>
    <string name="title_activity_swipe_list_view_aactivity">SwipeListViewActivity</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="calendarNameLabel">Calendar Name</string>
    <string name="default_calendarName">Calendar Name</string>
    <string name="loading">Loading...</string>
    <string name="sessions">Sessions</string>
    <string name="duration">Duration (hours)</string>
    <string name="default_workingHours">6</string>
    <string name="workingHoursPerDayLabel">Working hours per day</string>
    <string name="default_weekendAvailable">TRUE</string>
    <string name="weekendAvailableLabel">Weekend available</string>
    <string name="navLastWeek">-</string>
    <string name="navNextWeek">+</string>
    <string name="refresh">Refresh Calendar</string>
    <string name="cd_to_do_list">This is a To-Do List where you can create your tasks</string>
    <string name="cd_calendar">This is a Calendar where you have a quick overview of your daily tasks</string>
    <string name="cd_settings">Here you can change your settings for this app</string>
    <string name="cd_about">Here you can see infos and find help for this app</string>
    <string name="conflict_calendar">There is a conflict between your exercises and deadlines! Pleas go to your Todo list and check which exercises!</string>
    <string name="numberOfSessions">Same sessions a day</string>
    <string name="numberOfSessions_default">3</string>
    <string name="weekendStart">Start time on weekend</string>
    <string name="weekendStart_default">10</string>
    <string name="weekendWorktime">Worktime on Weekend</string>
    <string name="weekendWorktime_default">5</string>
    <string name="pause">Pause (min)</string>
    <string name="pause_default">30</string>
    <string name="weekStart">Start on weekdays</string>
    <string name="default_weekStart">8</string>
    <string name="updateAssignedExercsie">This exercise has already been assigned. There is no deadline update possible</string>
    <string name="worksession_done">Worksession is already done!</string>
    <string name="status_change">Status change not possible!</string>
    <string name="loading_message">Loading exercises</string>
    <string name="title_activity_exercise_statistics">ExerciseStatistics</string>
    <string name = "aboutAppHeader">Developers</string>
    <string name = "infoAppHeader">What does this application?</string>
    <string name ="aboutApp">This App was a project of the course Software Engineering Basic of Information Management
        					 at FH JOANNEUM Graz. Responsible developers were Alexander Hirz, Thomas Köck and Clemens Paumgarten.
        					  </string>
    <string name = "infoApp">The main purpose of this application is to simplify timemanagement. After the user imported
        					 his calendar he can create a new task within the app. In there he can define the amount of hours he 
        					 wants/has to spend for this task and how much work sessions he wants to spend for that. The app then looks
        					 for the best date and time where these work sessions fit the best and sets them there.</string>
    <string name="title_activity_about">About</string>
    <string name="cd_statistic">This shows a Statistic (Pie Chart) of your single tasks so far</string>
    <string name="pref_calender">Calender Settings</string>
    <string name="pref_calender_summary">Set your Calender name</string>
    <string name="pref_misc">Time - settings</string>
    <string name="datePast">"Date in past!"</string>
    <string name="noTaskName">"You have to give the task a name!"</string>
    <string name="existingTaskName">"There already exists a task with this name!"</string>
    <string name="numberWorkSession">" Work Session No. "</string>
    <string name="wrongDate">"Wrong date input"</string>
    <string name="cd_fhlogo">Here you can see the FH JOANNEUM Logo</string>
    
</resources>
