<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:attr/actionBarSize"
    android:background="@drawable/background"
    tools:context=".CreateTask" >

    <TextView
        android:id="@+id/label_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/task"
        android:textSize="@dimen/label_size" />

    <EditText
        android:id="@+id/input_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:inputType="text"
        android:textSize="@dimen/content_size" />

    <TextView
        android:id="@+id/label_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/deadline"
        android:textSize="@dimen/label_size" />

     
     <EditText
        android:id="@+id/input_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:inputType="text"
        android:textSize="@dimen/content_size"
        android:focusable="false" />

    <TextView
        android:id="@+id/label_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/priority"
        android:textSize="@dimen/label_size" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom"
        android:orientation="horizontal" 
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:id="@+id/rbtn_priority1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:onClick="onRadioButtonClicked"
            android:text="@string/priority1" />

        <RadioButton
            android:id="@+id/rbtn_priority2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:onClick="onRadioButtonClicked"
            android:text="@string/priority2" />

        <RadioButton
            android:id="@+id/rbtn_priority3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:onClick="onRadioButtonClicked"
            android:text="@string/priority3" />
    </RadioGroup>

    <TextView 
        android:id="@+id/label_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="@dimen/label_size"/>
    
    <EditText 
        android:id="@+id/input_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textSize="@dimen/content_size"/>
    
    <TextView 
        android:id="@+id/label_sessions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sessions"
        android:textSize="@dimen/label_size"/>
    
    <EditText 
        android:id="@+id/input_sessions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="@dimen/content_size"/>
    

    
     <TextView
        android:id="@+id/label_additional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/additional"
        android:textSize="@dimen/label_size" />

     <EditText
        android:id="@+id/input_additional"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textSize="@dimen/content_size" />


</LinearLayout>