<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    
    <item
        android:id="@+id/calendar_back"
        android:checkable="false"
        android:checked="false"
        android:enabled="true"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/back"
        android:icon="@drawable/back"
        android:visible="true">
    </item>
    
    
    <item
        android:id="@+id/add_Worksessions"
        android:checkable="false"
        android:checked="false"
        android:enabled="true"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/add"
        android:icon="@drawable/plus"
        android:visible="true">
    </item>
    

</menu>
