<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:attr/actionBarSize"
    android:background="@drawable/background"
    tools:context=".TaskDetails" >

    <TextView
        android:id="@+id/taskdetails_exercisename_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/task"
        android:textSize="@dimen/label_size" />

    <TextView
        android:id="@+id/taskdetails_exercisename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textSize="@dimen/content_size" />

    <TextView
        android:id="@+id/taskdetails_deadline_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/deadline"
        android:textSize="@dimen/label_size" />

    <EditText
        android:id="@+id/taskdetails_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="12dp"
        android:textSize="@dimen/content_size" />

    <TextView
        android:id="@+id/taskdetails_priority_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/priority"
        android:textSize="@dimen/label_size" />

    <TextView
        android:id="@+id/taskdetails_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textSize="@dimen/content_size" />
    
    <TextView 
        android:id="@+id/taskdetails_duration_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:layout_marginBottom="2dp"
        android:textSize="@dimen/label_size"/>
    
    <TextView 
        android:id="@+id/taskdetails_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textSize="@dimen/content_size"/>
    
     <TextView 
        android:id="@+id/taskdetails_sessions_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/sessions"
        android:textSize="@dimen/label_size"/>
    
    <TextView 
        android:id="@+id/taskdetails_sessions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textSize="@dimen/content_size"/>

    <TextView
        android:id="@+id/taskdetails_additional_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/additional"
        android:textSize="@dimen/label_size" />

    <TextView
        android:id="@+id/taskdetails_additional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textSize="@dimen/content_size" />

    <TextView
        android:id="@+id/taskdetails_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/status"
        android:textSize="@dimen/label_size" />

    <RadioGroup
        android:id="@+id/radiogroup_status"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbtn_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:onClick="onRadioButtonClicked"
            android:text="@string/finished"
            android:textSize="@dimen/content_size" />

        <RadioButton
            android:id="@+id/rbtn_notYetFinished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:onClick="onRadioButtonClicked"
            android:text="@string/notYetFinished"
            android:textSize="@dimen/content_size" />
    </RadioGroup>

</LinearLayout>