<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:attr/actionBarSize"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/to_do_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="31dp"
        android:contentDescription="@string/cd_to_do_list"
        android:onClick="toDoList"
        android:src="@drawable/checklist_icon" />

    <ImageView
        android:id="@+id/calender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/to_do_list"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/cd_calendar"
        android:onClick="calendarActivity"
        android:src="@drawable/calendar_icon" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/to_do_list"
        android:layout_alignTop="@+id/about"
        android:contentDescription="@string/cd_settings"
        android:onClick="onSettings"
        android:src="@drawable/settings_icon" />

    <ImageView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/calender"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="98dp"
        android:contentDescription="@string/cd_about"
        android:onClick="onAbout"
        android:src="@drawable/about_icon" />

</RelativeLayout>